gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: spring-gateway-service
spec:
    selector:
        app: spring-gateway
    ports:
        - port: 80
          targetPort: 8080
    type: LoadBalancer
