spring-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: spring-gateway-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /api(/|$)(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: spring-gateway
                            port:
                                number: 80
